2002-11-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLClassLoader/getResourceRemote.java: New test.
	* gnu/testlet/java/net/URLClassLoader/getResource.java: Make reusable.

	* gnu/testlet/java/net/URL/URLTest.java: Add sanity checks and debug.

2002-11-21  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/BufferedCharWriter:
	Renamed to BufferedWriter to match classname
	* gnu/testlet/java/io/BufferedWriter/Test.java:
	Changed package name accordingly.

2002-11-21  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/BufferedOutputStream/interrupt.java:
	* gnu/testlet/java/io/BufferedOutputStream/helper.java:
	* gnu/testlet/java/io/BufferedOutputStream/Test.java:
	Corrected package names in each source file;
	Fixed date on ChangeLog entry immediately below	

2002-11-21  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/BufferedOutputByteStream:
	Renamed directory to BufferedOutputStream to match classname

2002-11-20  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/net/ServerSocket/ServerSocketTest.java:
	replace e.printStackTrace() with harness.debug(e)
	* gnu/testlet/java/net/ServerSocket/MulticastSocketTest.java: ditto
	* gnu/testlet/java/net/ServerSocket/SocketTest.java: ditto +
	other tidyups
	
2002-11-17  Stephen Crawley <crawley@dstc.edu.au>	
	* gnu/testlet/java/net/Socket/SocketBServer.java: fixed indentation
	* gnu/testlet/java/net/Socket/SocketServer.java: ditto
	* gnu/testlet/java/net/Socket/SocketTest.java: ditto
	* Makefile.in, aclocal.m4, configure: removed from CVS

2002-11-16  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/BufferedCharWriter/Test.java:
	Added tests for remaining methods in BufferedWriter
	This directory will be renamed to match classname

2002-11-16  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/StringWriter/Test.java:
	Added tests for remaining methods in StringWriter

2002-11-16  Daryl Lee <dol@sources.redhat.com>